# teorial-musical

./: README.md  mkdocs.yml  pyproject.toml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/templates/: todos.md
teoria_musical/: acordes.py  app.py  campo_harmonico.py  error.py  escalas.py  notas.py
tests/: test_acordes.py  test_escalas.py
