[tool.poetry]
name = "teoria-musical"
version = "0.1.0"
description = ""
authors = ["MrMenezesDev <erick@mrmenezes.dev>"]
readme = "README.md"
packages = [{include = "teoria_musical"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.12"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
